--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.85.0"
   },
+  "homepage": "https://superman-saeed.github.io/tax-calculator",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
