--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node-sass": "^4.12.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "2.1.3"
   },
   "homepage": "https://superman-saeed.github.io/tax-calculator",
